--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,8 @@ NEXT_PUBLIC_HOST_NAME=http://localhost:3000/
 NEXT_PUBLIC_TAX_RATE=
 
 MONGO_URL=
+JWT_SECRET_SEED=
+
+# next auth config
+NEXTAUTH_URL=
+NEXTAUTH_SECRET=
