--- a/package.json
+++ b/package.json
@@ -13,23 +13,29 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
+    "@mui/x-data-grid": "^6.0.4",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.8",
     "react-slideshow-image": "^4.2.1",
     "swr": "^2.1.1",
     "typescript": "5.0.2"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/js-cookie": "^3.0.3",
+    "@types/jsonwebtoken": "^9.0.1"
   }
 }
