--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,13 @@ JWT_SECRET_SEED=
 # next auth config
 NEXTAUTH_URL=
 NEXTAUTH_SECRET=
+
+# Paypal
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=
+PAYPAL_SECRET=
+
+PAYPAL_OAUTH_URL=
+PAYPAL_ORDERS_URL=
+
+# Cloudinary
+CLOUDINARY_URL=
