--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@mui/x-data-grid": "^6.0.4",
     "@paypal/paypal-js": "^5.1.6",
@@ -31,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
+    "react-icons": "^4.8.0",
     "react-slideshow-image": "^4.2.1",
     "swr": "^2.1.1",
     "typescript": "5.0.2"
